# f1tenth_code

./: .gitignore  Dockerfile  README.md  docker-compose.yml  frames_2025-01-12_21.34.06.gv
install/: setup.sh
install/f1tenth_local_planner/lib/f1tenth_local_planner/: local_planner
install/f1tenth_local_planner/share/f1tenth_local_planner/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/gap_follow/lib/gap_follow/: gap_follow  pid_visualizer
install/joy_ackerman/share/joy_ackerman/: package.sh
install/my_car_controller/lib/my_car_controller/: car_controller
install/my_car_controller/share/my_car_controller/: package.dsv  package.ps1  package.sh
install/my_robot_mapper/share/ament_index/resource_index/parent_prefix_path/: my_robot_mapper
install/my_robot_mapper/share/my_robot_mapper/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/my_robot_mapper/share/my_robot_mapper/cmake/: my_robot_mapperConfig.cmake
install/my_robot_mapper/share/my_robot_mapper/config/: mapper_params.yaml
install/my_robot_mapper/share/my_robot_mapper/launch/: mapping.launch.py
install/my_robot_mapper/share/my_robot_mapper/rviz/: mapping.rviz
install/perfil_lidar/share/perfil_lidar/: package.sh  package.xml
maps/: my_map.pgm
ros2_ws/src/Joy_ackerman/: setup.py
ros2_ws/src/Joy_ackerman/joy_ackerman/: joy_ackerman.py
ros2_ws/src/f1tenth_local_planner/config/: local_planner.rviz  planner_params.yaml
ros2_ws/src/gap_follow/: package.xml  setup.py
ros2_ws/src/gap_follow/gap_follow/: gap_follow.py
ros2_ws/src/my_car_controller/: package.xml
ros2_ws/src/perfil_lidar/: setup.cfg
ros2_ws/src/perfil_lidar/perfil_lidar/: perfil_lidar.py
src/Joy_ackerman/: setup.cfg
src/f1tenth_gym_ros/: package.xml  setup.py
src/f1tenth_gym_ros/config/: sim.yaml
src/f1tenth_gym_ros/launch/: gym_bridge_launch.py
src/gap_follow/: CMakeLists.txt  README.md  package.xml  setup.py
src/gap_follow/config/: gap_follow.yaml  gap_follow_params.yaml
src/gap_follow/config/rviz/: gap_follow.rviz
src/gap_follow/gap_follow/: gap_follow.py
src/gap_follow/launch/: gap_follow.launch.py
src/my_robot_mapper/: CMakeLists.txt  README.md  package.xml
src/my_robot_mapper/config/: cartographer_2d.lua  f1tenth_qos.yaml
src/my_robot_mapper/launch/: mapping_f1tenth.launch.py  mapping_f1tenth_final.launch.py  mapping_f1tenth_simple.launch.py  poc.launch.py
src/perfil_lidar/: README.md
src/wall_follow/wall_follow/: wall_follow.py
testes/Joy_ackerman/launch/: launch_joy.py
testes/f1tenth_local_planner/: setup.cfg  setup.py
testes/f1tenth_local_planner/launch/: local_planner.launch.py
testes/my_car_controller/: setup.py
