<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_car_controller</name>
  <version>0.1.0</version>
  <description>
    An autonomous vehicle controller implementing RRT* path planning with advanced safety features.
    Includes adaptive speed control, obstacle avoidance, and diagnostic monitoring.
  </description>
  
  <maintainer email="disney@todo.todo">disney</maintainer>
  <license>Apache License 2.0</license>
  
  <!-- Main dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>rcl_interfaces</depend>
  
  <!-- Python dependencies -->
  <depend>python3-ompl</depend>
  <depend>python3-numpy</depend>
  <depend>python3-sklearn</depend>
  
  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <!-- Execution dependencies -->
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>
  
  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>